--- a/blocks/edit-form/__inputs/edit-form__inputs.css
+++ b/blocks/edit-form/__inputs/edit-form__inputs.css
@@ -1,6 +1,8 @@
 .edit-form__inputs {
   margin: 0 0 23px 0;
   width: 100%;
+  list-style: none;
+  padding: 0;
 }
 
 @media screen and (max-width: 823px) {
