--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,7 @@
 .header__logo {
   max-width: 142.01px;
-  margin: 0 0 40.6px 2px;
+  margin: 0 0 34.6px 2px;
+  padding: 0;
 }
 
 @media screen and (max-width: 960px) {
@@ -12,6 +13,6 @@
 @media screen and (max-width: 425px) {
   .header__logo {
     max-width: 104px;
-    margin-bottom: 31.6px;
+    margin-bottom: 25.6px;
   }
 }
