--- a/blocks/button/_type/button_type_like.css
+++ b/blocks/button/_type/button_type_like.css
@@ -1,11 +1,12 @@
-.button__like_theme_white {
+.button_type_like {
+  border-style: none;
   background-color: #ffffff;
-  background-image: url('./../../../../images/Like.svg');
+  background-image: url('./../../../images/Like.svg');
   -webkit-transition: opacity .15s linear;
   -o-transition: opacity .15s linear;
   transition: opacity .15s linear;
 }
 
-.button__like_theme_white:hover {
+.button_type_like:hover {
   opacity: .6;
 }
