--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,13 +1,8 @@
-@import url('./__add/button__add.css');
-@import url('./__add/_theme/button__add_theme_dark.css');
-@import url('./__edit/button__edit.css');
-@import url('./__edit/_theme/button__edit_theme_dark.css');
-@import url('./__like/button__like.css');
-@import url('./__like/_theme/button__like_theme_white.css');
-@import url('./__close/button__close.css');
-@import url('./__close/_theme/button__close_theme_dark.css');
-@import url('./__submit/button__submit.css');
-@import url('./__submit/_theme/button__submit_theme_dark.css');
+@import url('./_type/button_type_edit.css');
+@import url('./_type/button_type_close.css');
+@import url('./_type/button_type_submit.css');
+@import url('./_type/button_type_like.css');
+@import url('./_type/button_type_add.css');
 .button {
   outline: none;
   padding: 0;
