--- a/blocks/card/__description/card__description.css
+++ b/blocks/card/__description/card__description.css
@@ -15,6 +15,7 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 19px 21px 27px;
+  margin: 0;
 }
 
 @media screen and (max-width: 425px) {
