--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 @import url('./__logo/header__logo.css');
-@import url('./__line/header__line.css');
 .header {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
