--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,6 +3,9 @@
 @import url('./__form/popup__form.css');
 .popup {
   display: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
