--- a/blocks/user-profile/__user-info/user-profile__user-info.css
+++ b/blocks/user-profile/__user-info/user-profile__user-info.css
@@ -6,12 +6,32 @@
   padding-bottom: 25px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 17px auto;
+  grid-template-columns: repeat(2, auto);
+  grid-row-gap: 0px;
+  grid-column-gap: 17px;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: start;
 }
 
 @media screen and (max-width: 720px) {
   .user-profile__user-info {
     margin: 0;
     padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
   }
 }
 
