--- a/blocks/user-profile/__user-name/user-profile__user-name.css
+++ b/blocks/user-profile/__user-name/user-profile__user-name.css
@@ -1,4 +1,4 @@
-.user-info__user-name {
+.user-profile__user-name {
   width: 295px;
   font-weight: 500;
   font-size: 42px;
@@ -11,10 +11,11 @@
   padding-right: 2px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  margin: 0;
 }
 
 @media screen and (max-width: 720px) {
-  .user-info__user-name {
+  .user-profile__user-name {
     width: 201px;
     font-size: 27px;
     line-height: 56px;
