--- a/blocks/user-profile/user-profile.css
+++ b/blocks/user-profile/user-profile.css
@@ -1,5 +1,7 @@
 @import url('./__avatar/user-profile__avatar.css');
 @import url('./__user-info/user-profile__user-info.css');
+@import url('./__user-name/user-profile__user-name.css');
+@import url('./__user-job/user-profile__user-job.css');
 @import url('./__edit-button/user-profile__edit-button.css');
 @import url('./__add-button/user-profile__add-button.css');
 .user-profile {
