сделал добавление карточек, переделал лайки.

--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -5,5 +5,7 @@
   -ms-grid-row-align: flex-end;
   align-self: flex-end;
   margin-bottom: 4px;
-  background-size: cover;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
