--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   max-height: 282px;
+  min-height: 282px;
   -o-object-fit: cover;
   object-fit: cover;
   border-top-left-radius: 10px;
@@ -10,6 +11,8 @@
   object-position: center;
 }
 
+
+/*
 @media screen and (max-width: 960px) {
   .card__image {
     height: calc((100vw - 18px - 19px*2)/2);
@@ -21,6 +24,5 @@
   .card__image {
     height: calc(100vw - 19px*2);
     max-height: 581.2px;
-    min-height: 282px;
   }
-}
+}*/
