--- a/blocks/form/__submit-button/form__submit-button.css
+++ b/blocks/form/__submit-button/form__submit-button.css
@@ -1,4 +1,4 @@
-.edit-form__submit-button {
+.form__submit-button {
   width: 100%;
   font-size: 18px;
   line-height: 22px;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 823px) {
-  .edit-form__submit-button {
+  .form__submit-button {
     font-size: 14px;
     line-height: 1.22;
   }
