--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -1,4 +1,4 @@
-.edit-form__title {
+.form__title {
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 823px) {
-  .edit-form__title {
+  .form__title {
     font-size: 18px;
     line-height: 1.2;
     margin-bottom: 25px;
