--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,8 @@
 @import url('./__container/popup__container.css');
 @import url('./__close-button/popup__close-button.css');
 @import url('./__form/popup__form.css');
+@import url('./__form/_type/popup__form_type_edit.css');
+@import url('./__form/_type/popup__form_type_add.css');
 .popup {
   display: none;
   -webkit-box-pack: center;
