--- a/blocks/button/_like-status/button_like-status_checked.css
+++ b/blocks/button/_like-status/button_like-status_checked.css
@@ -1,3 +1,3 @@
 .button_like-status_checked {
-  background-image: url('./../../../images/Like-checked.svg');
+  background-image: url('./../../../images/like-checked.svg');
 }
