--- a/blocks/button/_like-status/button_like-status_not-checked.css
+++ b/blocks/button/_like-status/button_like-status_not-checked.css
@@ -1,3 +1,3 @@
 .button_like-status_not-checked {
-  background-image: url('./../../../images/Like.svg');
+  background-image: url('./../../../images/like.svg');
 }
