--- a/blocks/button/_type/button_type_close.css
+++ b/blocks/button/_type/button_type_close.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   border-style: none;
-  background-image: url(./../../../images/Close\ Icon.svg);
+  background-image: url(./../../../images/close-icon.svg);
   background-color: rgba(0, 0, 0, 0);
   -webkit-transition: opacity .15s linear;
   -o-transition: opacity .15s linear;
