--- a/blocks/button/_type/button_type_delete.css
+++ b/blocks/button/_type/button_type_delete.css
@@ -1,7 +1,7 @@
 .button_type_delete {
   border-style: none;
   background-color: rgba(0, 0, 0, 0);
-  background-image: url('./../../../images/Trash.svg');
+  background-image: url('./../../../images/trash.svg');
   background-size: cover;
   -webkit-transition: opacity .15s linear;
   -o-transition: opacity .15s linear;
