--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,10 @@
 @import url('./__container/popup__container.css');
 @import url('./__close-button/popup__close-button.css');
 @import url('./__form/popup__form.css');
+@import url('./__close-photo-button/popup__close-photo-button.css');
+@import url('./__photo-content/popup__photo-content.css');
+@import url('./__place-image/popup__place-image.css');
+@import url('./__place-name/popup__place-name.css');
 .popup {
   display: none;
   -webkit-box-pack: center;
