--- a/blocks/form/__title/form__title.css
+++ b/blocks/form/__title/form__title.css
@@ -11,7 +11,7 @@
 @media screen and (max-width: 823px) {
   .form__title {
     font-size: 18px;
-    line-height: 1.2;
+    line-height: 22px;
     margin-bottom: 25px;
   }
 }
