--- a/blocks/popup/__close-photo-button/popup__close-photo-button.css
+++ b/blocks/popup/__close-photo-button/popup__close-photo-button.css
@@ -3,16 +3,16 @@
   height: 41px;
   -ms-flex-item-align: end;
   align-self: flex-end;
-  -webkit-transform: translate(37px, 2px);
-  -ms-transform: translate(37px, 2px);
-  transform: translate(37px, 2px);
+  -webkit-transform: translate(41px, 0px);
+  -ms-transform: translate(41px, 0px);
+  transform: translate(41px, 0px);
 }
 
 @media screen and (max-width: 823px) {
-  .popup__close-button {
-    -webkit-transform: translate(0, 2px);
-    -ms-transform: translate(0, 2px);
-    transform: translate(0, 2px);
+  .popup__close-photo-button {
+    -webkit-transform: translate(35px, 5px);
+    -ms-transform: translate(35px, 5px);
+    transform: translate(35px, 5px);
     background-size: cover;
   }
 }
