--- a/blocks/popup/__place-image/popup__place-image.css
+++ b/blocks/popup/__place-image/popup__place-image.css
@@ -1,7 +1,7 @@
 .popup__place-image {
   margin: 0 0 10px;
-  /*width: 100%;*/
   max-width: 75vw;
   max-height: 75vh;
+  -o-object-fit: contain;
   object-fit: contain;
 }
