--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -3,6 +3,9 @@
 @import url('./__inputs/form__inputs.css');
 @import url('./__field/form__field.css');
 @import url('./__input/form__input.css');
+@import url('./__input/_type/form__input_type_error.css');
+@import url('./__input-error/form__input-error.css');
+@import url('./__input-error/_active/form__input-error_active.css');
 .form {
   display: -webkit-box;
   display: -ms-flexbox;
