--- a/blocks/user-profile/__user-name/user-profile__user-name.css
+++ b/blocks/user-profile/__user-name/user-profile__user-name.css
@@ -1,5 +1,5 @@
 .user-profile__user-name {
-  width: 295px;
+  max-width: 295px;
   font-weight: 500;
   font-size: 42px;
   line-height: 56px;
@@ -8,15 +8,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  padding-right: 2px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 0;
+  margin: 0 19px 0 0;
 }
 
 @media screen and (max-width: 720px) {
   .user-profile__user-name {
-    width: 201px;
+    max-width: 201px;
     font-size: 27px;
     line-height: 56px;
     text-align: center;
