--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -9,17 +9,9 @@
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-box-align: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
+  align-items: center;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 19px 21px 27px;
+  padding: 17px 21px 17px;
   margin: 0;
-}
-
-@media screen and (max-width: 425px) {
-  .card__description {
-    padding: 21px 21px 25px;
-  }
 }
