--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -4,6 +4,8 @@
 @import url('./__like-button/card__like-button.css');
 @import url('./__delete-button/card__delete-button.css');
 @import url('./__delete-button/_enabled/card__delete-button_enabled.css');
+@import url('./__like-info/card__like-info.css');
+@import url('./__like-counter/card__like-counter.css');
 .card {
   background-color: #ffffff;
   position: relative;
