--- a/src/blocks/user-profile/__avatar/user-profile__avatar.css
+++ b/src/blocks/user-profile/__avatar/user-profile__avatar.css
@@ -1,11 +1,16 @@
 .user-profile__avatar {
   width: 120px;
+  height: 120px;
   border-radius: 50%;
   -o-object-fit: cover;
   object-fit: cover;
   margin: 0px 30px 0px 0px;
   -ms-flex-item-align: start;
   align-self: flex-start;
+}
+
+.user-profile__avatar:hover {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 720px) {
