--- a/src/blocks/button/_like-status/button_like-status_not-checked.css
+++ b/src/blocks/button/_like-status/button_like-status_not-checked.css
@@ -1,3 +1,3 @@
 .button_like-status_not-checked {
-  background-image: url('./../../../images/like.svg');
+  background-image: url('./../../../images/likeDefault.svg');
 }
