--- a/src/blocks/button/_type/button_type_close.css
+++ b/src/blocks/button/_type/button_type_close.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: center;
   border-style: none;
-  background-image: url(./../../../images/close-icon.svg);
+  background-image: url(./../../../images/closeIcon.svg);
   background-color: rgba(0, 0, 0, 0);
   -webkit-transition: opacity .15s linear;
   -o-transition: opacity .15s linear;
@@ -17,6 +17,6 @@
 
 @media screen and (max-width: 823px) {
   .button_type_close {
-    background-image: url(./../../../images/close-icon-mobile.svg);
+    background-image: url(./../../../images/closeIconMobile.svg);
   }
 }
