--- a/src/blocks/button/_type/button_type_edit.css
+++ b/src/blocks/button/_type/button_type_edit.css
@@ -5,7 +5,7 @@
   background-position: center;
   border-style: none;
   background-color: #000000;
-  background-image: url(./../../../images/vector-edit-2.svg);
+  background-image: url(./../../../images/vectorEdit.svg);
   border: 1px solid #ffffff;
   -webkit-transition: opacity .15s linear;
   -o-transition: opacity .15s linear;
